include_directories(../..)

find_package(ale REQUIRED)
find_package(OpenCV REQUIRED)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/")
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)

if(NOT ${ale_FOUND})
    MESSAGE(STATUS "Could not locate ALE.")
endif()
if(NOT ${OpenCV_FOUND})
    MESSAGE(STATUS "Could not locate OpenCV.")
endif()

if(${ale_FOUND} AND ${OpenCV_FOUND})
    if (ale_VERSION VERSION_LESS "0.7.3")
        message(STATUS "ALE requires version >= 0.7.4 to link against libtorch.")
    else()
        add_executable(muzero_ale muzero_ale.cpp)
        include_directories(${OpenCV_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
        target_link_libraries(muzero_ale ale::ale-lib ${OpenCV_LIBS} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} muzero_cpp)
    endif()
endif()
